# QuickFire

./: Cargo.toml  README.md  puzzles.txt
src/: main.rs  main.rsx
