[package]
name = "quickfire"
version = "2.1.0"
edition = "2021"
authors = ["MABUSE"]
license = "MIT"

[dependencies]
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = "0.28"
num-bigint = "0.4"
num_cpus = "1.17.0"
chrono = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2.19"
